Wave says there is, but i'm not sure there is contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(73, 69, 145, 0.75); /* Adjust the overlay color and opacity as needed */
+    background-color: rgba(51, 43, 119, 0.85); /* Adjust the overlay color and opacity as needed */
     z-index: -1; /* Position the overlay behind the content */
 }
 
